fix double border

--- a/scss/widgets/base/_gridBase.scss
+++ b/scss/widgets/base/_gridBase.scss
@@ -49,7 +49,7 @@
     }
 
     > .dx-#{$widget-name}-pager {
-      margin-top: 1px;
+      margin-top: -1px;
     }
 
     > .dx-#{$widget-name}-header-panel {
